--- a/opdracht-1/index.html
+++ b/opdracht-1/index.html
@@ -11,25 +11,25 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="https://ciaotutti.nl/about">About</a></li>
-                    <li><a href="https://ciaotutti.nl/articles">Articles</a></li>
-                    <li><a href="https://ciaotutti.nl/places">Places</a></li>
-                    <li><a href="https://ciaotutti.nl/contact">Get in Touch</a></li>
+                    <li><a class="nav_ul" href="https://ciaotutti.nl/about">About</a></li>
+                    <li><a class="nav_ul" href="https://ciaotutti.nl/articles">Articles</a></li>
+                    <li><a class="nav_ul" href="https://ciaotutti.nl/places">Places</a></li>
+                    <li><a class="nav_ul" href="https://ciaotutti.nl/contact">Get in Touch</a></li>
                 </ul>
             </nav>
         </header>
 
-        <img src="assets/header-image.jpg" alt="Tutti">
+        <img id="jaleh" src="assets/header-image.jpg" alt="Tutti">
 
         <main>
             <h1>Latest Articles</h1>
             <article>
                 <h3>Quisque Tortor Lacus</h3>
-                <p>Morbi quis felis ex. Nulla lacus risus, laoreet tempus ipsum vitae, suscipit maximus est. Curabitur accumsan cursus ullamcorper. Proin tempus quam vel orci pulvinar, non finibus lectus rhoncus... <a href="#">read more &raquo;</a></p>
+                <p>Morbi quis felis ex. Nulla lacus risus, laoreet tempus ipsum vitae, suscipit maximus est. Curabitur accumsan cursus ullamcorper. Proin tempus quam vel orci pulvinar, non finibus lectus rhoncus... <a class="main_link" href="#">read more &raquo;</a></p>
             </article>
             <article>
                 <h3>Suspendisse et Eleifend Metus</h3>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque tortor lacus, blandit vitae lacus ut dui rhoncus, laoreet diam vel, tincidunt... <a href="#">read more &raquo;</a></p>
+                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque tortor lacus, blandit vitae lacus ut dui rhoncus, laoreet diam vel, tincidunt... <a class="main_link" href="#">read more &raquo;</a></p>
             </article>
 
             <div>
@@ -44,15 +44,15 @@
                 </div>
                 <div class="subscribe">
                     <h3>Stay up to date of all the travels</h3>
-                    <p>Vestibulum <a href="#">erat augue</a>, consequat non tellus ac, posuere scelerisque augue.</p>
-                    <input type="text" placeholder="Enter email...">
-                    <input type="submit" value="Signup">
+                    <p>Vestibulum <a class="main_link" href="#">erat augue</a>, consequat non tellus ac, posuere scelerisque augue.</p>
+                    <input class="input_text" type="text" placeholder="Enter email...">
+                    <input class="input_signup" type="submit" value="Signup">
                 </div>
             </div>
         </main>
 
         <footer>
-            <span>&copy;2020 Ciao Tutti Blog</span>
+            <span class="footer_span">&copy;2020 Ciao Tutti Blog</span>
         </footer>
     </div>
 </body>
