--- a/opdracht-2/index.html
+++ b/opdracht-2/index.html
@@ -40,11 +40,11 @@
     <hr />
 
     <!--    OPDRACHT 2.4    -->
-    <div>
+    <div class="four">
         <form>
             <label for="username">
                 Gebruikersnaam:
-                <input id="username" type="text" name="username"/>
+                <input id="username" type="tex" name="username"/>
             </label>
             <label for="password">
                 Wachtwoord:
@@ -65,7 +65,7 @@
             <h1>Lorum ipsum dolor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
         </article>
-        <article>
+        <article class="five_last">
             <h1>Lorum ipsum dolor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
         </article>
